--- a/SIPER/nbproject/project.properties
+++ b/SIPER/nbproject/project.properties
@@ -27,7 +27,7 @@ dist.dir=dist
 dist.jar=${dist.dir}/SIPER.jar
 dist.javadoc.dir=${dist.dir}/javadoc
 excludes=
-file.reference.mysql-connector-java-5.1.23-bin.jar=../../../../lucas/OneDrive/Documentos/BibliotecasNetBeans/mysql-connector-java-5.1.23-bin.jar
+file.reference.mysql-connector-java-5.1.23-bin.jar=C:\\Users\\lucas\\OneDrive\\Documentos\\BibliotecasNetBeans\\mysql-connector-java-5.1.23-bin.jar
 includes=**
 jar.compress=false
 javac.classpath=\
